--- a/src/Page.css
+++ b/src/Page.css
@@ -9,6 +9,7 @@
   background-position: center center;
   background-size: contain;
   background-repeat: no-repeat;
+  overflow-x: hidden;
 }
 
 @media (max-width: 960px) {
